--- a/src/components/Requests.css
+++ b/src/components/Requests.css
@@ -137,13 +137,13 @@
     overflow: hidden;/* Hide overflow for rounded corners on button */
   }
   
-  .search-input {
+  .ac-search-input {
     border:black;
     border-style: solid;
     padding: 10px 15px;
     font-size: 1em;
     flex-grow: 1; /* Allow input to take up available space */
-    border-radius: 25px 0 0 25px; /* Left rounded corners */
+    border-radius: 25px 0 0 25px;
   }
   
   .search-button {
