Find Tutors Page
I have added some css and the navbar

--- a/src/studentFindTutorComponents/StudentFindTutorBodyRefineSearchSideBar.css
+++ b/src/studentFindTutorComponents/StudentFindTutorBodyRefineSearchSideBar.css
@@ -2,7 +2,7 @@
 .StudentFindTutorBodyRefineSearchSidebar{
     display: inline-block;
     position: absolute;
-    top:34.3%;
+    /* top:34.3%; */
     padding-left: 2%;
     padding-right: 2%;
     padding-bottom: 2%;
@@ -10,14 +10,14 @@
     background-color: #145da0;
     max-width: 30%;
     color: white;
-    
+    margin-left: 20px;
+    margin-top: 110px;
 }
 .StudentFindTutorBodyRefineSearchSidebar h2{
  margin:0%;
 }
 .StudentFindTutorBodyRefineSearchBox{
     display: inline-block;
-
     left: 0%;
     padding-bottom: 1%;
 }
