--- a/src/StudentFindTutorApp.css
+++ b/src/StudentFindTutorApp.css
@@ -19,12 +19,12 @@ button {
   background-color: #145da0;
   color: white;
   font-size: 14px;
-  padding: 25px 40px;
+  padding: 14px;
   border-radius: 5px;
   border: none;
   cursor: pointer;
   right: 3%;
-  top: 34.3%;
+  margin-top: 119px;
 }
 .StudentFindTutorSearchTutorButton button:hover{
     background-color:#00cfc8 ;
@@ -33,8 +33,9 @@ button {
 .StudentFindTutorCount{
   display: inline-block;
   position: absolute;
-  left: 75%;
-  top: 35%;
+  left: 80%;
+  top: 29%;
+  font-size: 15px;
+  font: bold;
+  font-style: italic;
 }
-/* color:#00cfc8;
-    background-color: #145da0; */
