--- a/src/studentFindTutorComponents/StudentFindTutorTitleCard.css
+++ b/src/studentFindTutorComponents/StudentFindTutorTitleCard.css
@@ -1,17 +1,24 @@
 .StudentFindTutorTitleCard {
   background-color: #d9d9d9;
-  padding: 20px;
-  padding-top: 0px;
+  padding: 7px;
+  /* padding-top: 0px; */
   padding-left: 2%;
-  height: 200px;
+  height: 100px;
   position: absolute;
   top:10%;
   width: 100%;
 
 }
 .StudentFindTutorTitleCard img{
-    max-height: 100%;
+    /* max-height: 100%; */
     position: absolute;
     left: 65%;
     top: 2.1%;
+    height: 100px;
+}
+#H1Slogan{
+  margin-top: 1px;
+}
+#paragraphSlogan{
+  margin-top: 1px;
 }
