--- a/src/Progress.css
+++ b/src/Progress.css
@@ -3,12 +3,12 @@
     color: white;
     padding: 20px;
     position: absolute;
-    top: 500px; /* Adjust position */
+    top: 431px; /* Adjust position */
     left: 30px; 
     border-radius: 10px;
     width: 260px;
-    height: auto; /* Flexible height */
-    min-height: 400px; /* Minimum height */
+    height: 180px; /* Flexible height */
+    min-height: 250px; /* Minimum height */
     display: flex;
     flex-direction: column;
     z-index: 10;
@@ -24,7 +24,7 @@
   
   .progress-image-container {
     flex: 1;
-    min-height: 150px; /* Reduced minimum height */
+    min-height: 140px; /* Reduced minimum height */
     position: relative;
     overflow: hidden;
     border-radius: 8px;
