--- a/src/Tasks.css
+++ b/src/Tasks.css
@@ -3,17 +3,21 @@
     justify-content: space-evenly;
     width: 100%; /* ensure full width */
     margin: 80px 30px 30px 30px;
-    gap: 20px;
+    gap: 2em;
+    font-size: 10px;
   }
   
   .task-box {
     width: 250px; 
-    height: 150px;
+    height: 90px;
     background-color: rgb(4, 4, 78);
     color: white;
     text-align: center;
-    padding: 20px;
+    padding: 15px;
     border-radius: 10px;
+  }
+  #PendingTasks{
+    font-size: 25px;
   }
   
   
